# snakesocks-windows

./: .gitignore  CMakeLists.txt  README.md  TODO  example.conf
dlfcn-win32/: config.mak  dlfcn.c  test.c
env/: cmake_cmd  fake_g++.sh  fake_gcc.sh
gui-visual-studio/: SnakeSocksClientGUI.sln
gui-visual-studio/SnakeSocksClientGUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SnakeSocksClientGUI.csproj
gui-visual-studio/SnakeSocksClientGUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
modules/: simple_proxy.c  stdafx.h
src/: client-for-gui.cc  client.cc  config.hpp  module-port.hpp  module.cc  module.hpp  socks5.cc  socks5.hpp  syserr.hpp  tunnel.cc  tunnel.hpp
src/lib/: NetLib.cc  NetLib.hpp  fstr.cc  fstr.h  scope_guard.hpp  sio.cc  sio.hpp  threadPool.hpp
